--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -17,7 +17,7 @@ RUN go get sigs.k8s.io/kustomize/kustomize/v4@v4.1.3 \
 
 ENV PATH /go/bin:$PATH
 ENV DAPPER_SOURCE /workspace
-ENV DAPPER_OUTPUT bin build/bin dist
+ENV DAPPER_OUTPUT bin dist
 ENV DAPPER_DOCKER_SOCKET true
 ENV DAPPER_ENV TAG REPO GOOS CROSS DRONE_TAG SHORT E2E_USE_EXISTING KUBECONFIG CI DRONE_PULL_REQUEST
 ENV DAPPER_RUN_ARGS "-v opni-build-go16-pkg:/go/pkg -v opni-build-go16-cache:/root/.cache/go-build -v /home/dbason/git/opni/opni-opensearch-operator:/home/dbason/git/opni/opni-opensearch-operator"
