--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -15399,6 +15399,121 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
+  name: datapreppers.opni.io
+spec:
+  group: opni.io
+  names:
+    kind: DataPrepper
+    listKind: DataPrepperList
+    plural: datapreppers
+    singular: dataprepper
+  scope: Namespaced
+  versions:
+  - additionalPrinterColumns:
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v2beta1
+    schema:
+      openAPIV3Schema:
+        properties:
+          apiVersion:
+            type: string
+          kind:
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              cluster:
+                type: string
+              defaultRepo:
+                type: string
+              image:
+                type: string
+              imagePullPolicy:
+                type: string
+              imagePullSecrets:
+                items:
+                  properties:
+                    name:
+                      type: string
+                  type: object
+                type: array
+              nodeSelector:
+                additionalProperties:
+                  type: string
+                type: object
+              opensearch:
+                properties:
+                  endpoint:
+                    type: string
+                  insecureDisableSSLVerify:
+                    type: boolean
+                type: object
+              passwordFrom:
+                properties:
+                  key:
+                    type: string
+                  name:
+                    type: string
+                  optional:
+                    type: boolean
+                required:
+                - key
+                type: object
+              tolerations:
+                items:
+                  properties:
+                    effect:
+                      type: string
+                    key:
+                      type: string
+                    operator:
+                      type: string
+                    tolerationSeconds:
+                      format: int64
+                      type: integer
+                    value:
+                      type: string
+                  type: object
+                type: array
+              username:
+                type: string
+              version:
+                default: latest
+                type: string
+            required:
+            - username
+            - version
+            type: object
+          status:
+            properties:
+              conditions:
+                items:
+                  type: string
+                type: array
+              state:
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.5.0
+  creationTimestamp: null
   name: downstreamclusters.opni.io
 spec:
   group: opni.io
@@ -18995,6 +19110,8 @@ spec:
                 type: object
               containerLogDir:
                 type: string
+              downstreamCluster:
+                type: boolean
               eks:
                 type: object
               fluentConfig:
@@ -25024,7 +25141,6 @@ spec:
               seLinuxEnabled:
                 type: boolean
             required:
-            - opniCluster
             - provider
             type: object
           status:
@@ -47690,6 +47806,32 @@ rules:
   - opensearch.opni.io
   resources:
   - opensearchclusters/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/status
   verbs:
   - get
   - patch
