--- a/config/crd/bases/opni.io_multiclusterrolebindings.yaml
+++ b/config/crd/bases/opni.io_multiclusterrolebindings.yaml
@@ -6,22 +6,22 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
-  name: loggingclusters.opni.io
+  name: multiclusterrolebindings.opni.io
 spec:
   group: opni.io
   names:
-    kind: LoggingCluster
-    listKind: LoggingClusterList
-    plural: loggingclusters
-    singular: loggingcluster
+    kind: MulticlusterRoleBinding
+    listKind: MulticlusterRoleBindingList
+    plural: multiclusterrolebindings
+    singular: multiclusterrolebinding
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
-    - jsonPath: .status.indexUserState
-      name: IndexUser
+    - jsonPath: .status.state
+      name: State
       type: boolean
     name: v2beta1
     schema:
@@ -35,14 +35,7 @@ spec:
             type: object
           spec:
             properties:
-              friendlyName:
-                type: string
-              indexUser:
-                properties:
-                  name:
-                    type: string
-                type: object
-              opensearchCluster:
+              opensearch:
                 properties:
                   name:
                     type: string
@@ -56,8 +49,6 @@ spec:
                 items:
                   type: string
                 type: array
-              indexUserState:
-                type: string
               state:
                 type: string
             type: object
