Work in progress refactor for improved token and cluster capabilities

--- a/deploy/charts/opni-monitoring/crds/monitoring.opni.io_bootstraptokens.yaml
+++ b/deploy/charts/opni-monitoring/crds/monitoring.opni.io_bootstraptokens.yaml
@@ -29,6 +29,18 @@ spec:
             properties:
               metadata:
                 properties:
+                  capabilities:
+                    items:
+                      properties:
+                        reference:
+                          properties:
+                            id:
+                              type: string
+                          type: object
+                        type:
+                          type: string
+                      type: object
+                    type: array
                   labels:
                     additionalProperties:
                       type: string
