--- a/deploy/charts/opni-monitoring/crds/monitoring.opni.io_clusters.yaml
+++ b/deploy/charts/opni-monitoring/crds/monitoring.opni.io_clusters.yaml
@@ -29,9 +29,19 @@ spec:
             properties:
               id:
                 type: string
-              labels:
-                additionalProperties:
-                  type: string
+              metadata:
+                properties:
+                  capabilities:
+                    items:
+                      properties:
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                  labels:
+                    additionalProperties:
+                      type: string
+                    type: object
                 type: object
             type: object
         type: object
