Add bootstrap cli

--- a/config/crd/bases/opni.io_multiclusterrolebindings.yaml
+++ b/config/crd/bases/opni.io_multiclusterrolebindings.yaml
@@ -42,6 +42,8 @@ spec:
                   namespace:
                     type: string
                 type: object
+              opensearchExternalURL:
+                type: string
             type: object
           status:
             properties:
