--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
 - bases/opni.io_gpupolicyadapters.yaml
 - bases/opni.io_loggingclusters.yaml
 - bases/opni.io_datapreppers.yaml
+- bases/opni.io_multiclusterrolebindings.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
