--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,10 +1,10 @@
-FROM golang:1.17
+FROM golang:1.18rc1
 
 ENV DOCKER_VERSION=20.10.5
 
-RUN go get sigs.k8s.io/kustomize/kustomize/v4@v4.1.3 \
-  && go get sigs.k8s.io/kubebuilder/v3/cmd@v3.1.0 \
-  && go get sigs.k8s.io/controller-tools/cmd/controller-gen@v0.5.0 \
+RUN go install sigs.k8s.io/kustomize/kustomize/v4@v4.5.2 \
+  && go install sigs.k8s.io/kubebuilder/v3/cmd@v3.1.0 \
+  && go install sigs.k8s.io/controller-tools/cmd/controller-gen@v0.5.0 \
   && curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.38.0 \
   && apt update \
   && apt -y install jq \
