--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,10 +74,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       - name: Push UI image
         if: ${{ steps.build.outputs.push_ui_image != '' }}
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ steps.build.outputs.push_ui_image }}
+        run: |
+          docker push ${{ steps.build.outputs.push_ui_image }}
       - name: Upload test results to Codecov
         uses: codecov/codecov-action@v1
         with:
