--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -5,7 +5,7 @@ ENV DOCKER_VERSION=20.10.5
 RUN go install sigs.k8s.io/kustomize/kustomize/v4@v4.5.2 \
   && go install sigs.k8s.io/kubebuilder/v3/cmd@v3.1.0 \
   && go install sigs.k8s.io/controller-tools/cmd/controller-gen@v0.5.0 \
-  && curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.38.0 \
+  && curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.44.2 \
   && apt update \
   && apt -y install jq \
   && curl -sL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz -o docker-${DOCKER_VERSION}.tgz \
