update id validation to match cortex docs; log sampling; magefile refactor

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ tilt_modules/
 tilt-options.yaml
 
 deploy/manifests
+deploy/custom/cortex.yaml
 deploy/custom/grafana.yaml
 deploy/custom/opni-monitoring.yaml
 
