--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
 - bases/opni.io_datapreppers.yaml
 - bases/opni.io_multiclusterrolebindings.yaml
 - bases/opni.io_loggingclusterbindings.yaml
+- bases/opni.io_multiclusterusers.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
