--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -25424,7 +25424,6 @@ spec:
               seLinuxEnabled:
                 type: boolean
             required:
-            - opniCluster
             - provider
             type: object
           status:
@@ -25485,31 +25484,16 @@ spec:
             type: object
           spec:
             properties:
-              downstreamClusters:
-                items:
-                  type: string
-                type: array
-              downstreamLabelSelector:
+              loggingCluster:
                 properties:
-                  matchExpressions:
-                    items:
-                      properties:
-                        key:
-                          type: string
-                        operator:
-                          type: string
-                        values:
-                          items:
-                            type: string
-                          type: array
-                      required:
-                      - key
-                      - operator
-                      type: object
-                    type: array
-                  matchLabels:
-                    additionalProperties:
-                      type: string
+                  id:
+                    type: string
+                  loggingClusterName:
+                    properties:
+                      name:
+                        type: string
+                      namespace:
+                        type: string
                     type: object
                 type: object
               opensearchClusterRef:
@@ -25519,10 +25503,13 @@ spec:
                   namespace:
                     type: string
                 type: object
-              password:
-                type: string
-              username:
-                type: string
+              user:
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                type: object
             required:
             - opensearchClusterRef
             type: object
@@ -33812,6 +33799,74 @@ spec:
                 type: object
               opensearchExternalURL:
                 type: string
+            type: object
+          status:
+            properties:
+              conditions:
+                items:
+                  type: string
+                type: array
+              state:
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.5.0
+  creationTimestamp: null
+  name: multiclusterusers.opni.io
+spec:
+  group: opni.io
+  names:
+    kind: MulticlusterUser
+    listKind: MulticlusterUserList
+    plural: multiclusterusers
+    singular: multiclusteruser
+  scope: Namespaced
+  versions:
+  - additionalPrinterColumns:
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    - jsonPath: .status.state
+      name: State
+      type: boolean
+    name: v2beta1
+    schema:
+      openAPIV3Schema:
+        properties:
+          apiVersion:
+            type: string
+          kind:
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              opensearchClusterRef:
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                type: object
+              password:
+                type: string
+            required:
+            - opensearchClusterRef
             type: object
           status:
             properties:
@@ -48088,6 +48143,32 @@ rules:
   - opni.io
   resources:
   - multiclusterrolebindings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers/status
   verbs:
   - get
   - patch
