--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           stable: false
-          go-version: "1.18.0-rc1"
+          go-version: "1.18"
       - name: Install dependencies
         run: go mod download
       - name: Build
