--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -7,7 +7,7 @@ tenant_federation:
   enabled: true
 
 server:
-  log_level: error
+  log_level: debug
   http_listen_port: {{ .HttpListenPort }}
   grpc_listen_port: {{ .GrpcListenPort }}
   http_tls_config: &tls_server_config
@@ -54,7 +54,7 @@ ingester:
   lifecycler:
     # The address to advertise for this ingester.  Will be autodiscovered by
     # looking up address on eth0 or en0; can be specified if this fails.
-    address: localhost
+    address: 127.0.0.1
 
     # We want to start immediately and flush on shutdown.
     join_after: 0
